--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
 		"@type": "Organization",
 		"name": "Recyclan"
 }</script>
-    <meta name="theme-color" content="#478ac9">
+    <meta name="theme-color" content="#03662f">
     <meta property="og:title" content="About">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
