--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
 		"@type": "Organization",
 		"name": "Recyclan"
 }</script>
-    <meta name="theme-color" content="#478ac9">
+    <meta name="theme-color" content="#03662f">
     <meta property="og:title" content="Home">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
