--- a/Page-1.html
+++ b/Page-1.html
@@ -20,7 +20,7 @@
 		"@type": "Organization",
 		"name": "Recyclan"
 }</script>
-    <meta name="theme-color" content="#478ac9">
+    <meta name="theme-color" content="#03662f">
     <meta property="og:title" content="Page 1">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
